lab1/Test/L1-A-4-97.cmm
int hQ6IYxXtJRVI struct HbTnBIIcCEGfv8 {
}BFSZSmAkArFo6E ) {
}
float 
] int KMDo0x_S8WfogD 
;
